# foundation-ur-py

./: .gitignore  .pylintrc  README.md  pyproject.toml  test.py  test_utils.py
src/ur/: basic_decoder.py  cbor_lite.py  crc32.py  file_fountain_decoder.py  file_fountain_encoder.py  file_ur_decoder.py  file_ur_encoder.py  fountain_decoder.py  fountain_encoder.py  fountain_utils.py  random_sampler.py  ur.py  ur_decoder.py  ur_encoder.py  utils.py  xoshiro256.py
src/ur/bytewords/: __init__.py  bytewords_decode.py  bytewords_encode.py
