[tool.poetry]
name="ur"
version="0.1.0"
description="UR Implementation in Python -- ported from the C++ Reference Implementation by Blockchain Commons"
license="BSD-2-Clause Plus Patent License"
authors= ["Ken Carpenter <ken@foundationdevices.com>"]

[tool.poetry.urls]
repository = "https://github.com/Foundation-Devices/foundation-ur-py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0.0"
